<resources>
    <string name="app_name">SR2 Toolkit</string>
    <string name="nav_header_title">JasonCaesar007</string>
    <string name="nav_header_subtitle">InfinityIndustry Studio</string>
    <string name="app_version">Version：1.0 LTS</string>
    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Exit</string>
    <string name="nav_header_desc">Navigator</string>
    <string name="action_about">About</string>
    <string name="clear_craft">Clear</string>
    <string name="menu_home">Load Craft</string>
    <string name="craft_name_label">Craft Name：</string>
    <string name="Apply">Apply</string>
    <string name="apply_button">Apply</string>
    <string name="explain">Introduction</string>
    <string name="Output">Output</string>
    <string name="craft_resize">Craft Resize</string>
    <string name="craft_resize_label">Scaling：</string>
    <string name="to_scale">Only For Diameter</string>
    <string name="scale_label">Craft Scale</string>
    <string name="mass_scale">Mass Scale：</string>
    <string name="craft_collisions">Craft Collisions</string>
    <string name="collisions_model_label">Collision Mode：</string>
    <string name="collisions_response_label">Collision Response：</string>
    <string name="craft_drag">Craft Drag</string>
    <string name="craft_drag_label">Drag Scale：</string>
    <string name="text_drag_model">Drag Model:</string>
    <string name="craft_resistance">Craft Resistance</string>
    <string name="craft_damage">Part Health：</string>
    <string name="craft_heat_resist">Part Temperature：</string>
    <string name="craft_appearance">Craft Appearance</string>
    <string name="part_bit_reserve_label">Part Debris：</string>
    <string name="part_transparent_label">Support Transparency：</string>
    <string name="part_shadow_label">Parts Cast Shadows：</string>
    <string name="fuel_tanks_texture_label">Fuel Tanks\' Texture：</string>
    <string name="craft_other">Others</string>
    <string name="color_block_label">Add Color Checks：</string>
    <string name="inertia_tensor_label">Inertial Tensor User Scale：</string>
    <string name="fuel_line_label">All-around Fuel Lines：</string>
    <string name="applied">It has been modified</string>
    <string name="rw_permissions_true">Access Succeeded</string>
    <string name="rw_permissions_false">Please authorize the application to use internal storage</string>
    <string name="file_exists_true">Loading succeeded. Click the menu bar to start using!</string>
    <string name="file_exists_false">Craft does not exist! Please check if the file name is wrong!</string>
    <string name="result_time">Time Used:</string>
    <string name="second">Second</string>
    <string name="loading_file">Loading Craft</string>
    <string name="output_file">OutputIng</string>
    <string name="clear_text">All modifications have been cleared</string>
    <string name="warning">Warning</string>
    <string name="error1">Please import the file first!</string>
    <string name="error2">Do not enter SPACE!</string>
    <string name="error3">You need to modify at least one of them!</string>
    <string name="load_craft_file_1">Instructions for Importing Files</string>
    <string name="load_craft_file_2">1.Copy the craft file to: /sdcard/Android/data/com.infinity.sr2.toolkit/files/</string>
    <string name="load_craft_file_3">2.Fill in the name of your craft in the input box without . xml suffix</string>
    <string name="load_craft_file_4">If an error is reported,that means the file name is filled incorrectly</string>
    <string name="load_craft_file_5">If you have many things to modify,do them and choose to output in once.</string>
    <string name="load_craft_file_6">All the modifications can be cleared by clicking on the CLEAR button in the upper right corner</string>
    <string name="craft_resize_1">Instructions for Craft Global Scaling</string>
    <string name="craft_resize_2">The first input box is for scale, which is used to enlarge or reduce the craft as a whole</string>
    <string name="craft_resize_3">To enlarge the craft to 200%, enter 2. Reduce the craft to 20%, enter 0.2, and so on</string>
    <string name="craft_resize_4">Only positive numbers can be entered in the input box, NO negative numbers!</string>
    <string name="craft_resize_5">If only the diameter is modified, it means to modify the width and depth of the fuel tank</string>
    <string name="craft_resize_6">When Craft Scale is checked, the processing of the fuel tank is changed to modify the part scale size in the Tinker Panel</string>
    <string name="craft_resize_7">The second input box is used to scale the mass size of all parts, for example:</string>
    <string name="craft_resize_8">When entering 2, the massScale will be changed to 200%, when entering 0.2, it will be changed to 20%, and so on</string>
    <string name="craft_resize_9">If you need to keep the original settings, please leave blank and do not enter anything</string>
    <string name="craft_resize_10">If you need to restore the default quality, please enter "default" in the Mass Scale input box (pay attention to case)</string>
    <string name="collisions_1">Craft collision instructions</string>
    <string name="collisions_2">Click the button next to the text to pop up a drop-down list and select the attribute you want to be modified</string>
    <string name="collisions_3">The Part Collision mode corresponds to the part collision in the Tinker Panel</string>
    <string name="collisions_4">The Collision Response mode of the collision box corresponds to the Collision Response in the Tinker Panel</string>
    <string name="collisions_5">"DisOnly" in Collision Response mode corresponds to the DisconnectOnly option</string>
    <string name="collisions_6">When you need to keep the original property settings unchanged, please select the "Do not change" option before confirming</string>
    <string name="drag_1">Instructions for Craft Drag</string>
    <string name="drag_2">Craft Drag corresponds to Drag Scale value in Tinker Panel</string>
    <string name="drag_3">Craft Drag Model Include In Drag</string>
    <string name="drag_4">If you want to back to the default value of Drag Scale, enter "default"</string>
    <string name="resistance_1">Instructions for the use of Craft Resistance</string>
    <string name="resistance_2">The Part Health corresponds to the maxDamage attribute in the Config node, which refers to the maximum part blood volume</string>
    <string name="resistance_3">For example, if the default maxDamage of the rocket engine is not modified after the damage setting is added to the new version</string>
    <string name="resistance_4">Engines will explode when reaches 100% damage during it works</string>
    <string name="resistance_5">The Heat Resistance of the part corresponds to the value of the Heat Shield slider in the Advanced Part Setting</string>
    <string name="resistance_6">If you need to keep the setting of the original, Do not fill in any content in the input box. If you want to back to the default, enter "default" (pay attention to case)</string>
    <string name="appearance_1">Craft Appearance Instructions</string>
    <string name="appearance_2">Part Debris corresponding to the Prevent Debris switch in the Tinker Panel</string>
    <string name="appearance_3">Support Transparency of parts corresponds to the Supports Transparency switch in the Tinker Panel</string>
    <string name="appearance_4">Parts Cast Shadows corresponds to the Cast Shadows switch in the Tinker Panel</string>
    <string name="appearance_5">Fuel Tanks\' Texture switch is turned off, only the texture of all oil tanks will be set to None, and other parts will not be modified. Keep it open if necessary</string>
    <string name="other_1">Instructions for Others attributes</string>
    <string name="other_2">The number of color checks in the Paint Tool tool corresponding to the color grid added</string>
    <string name="other_3">The maximum number of grids supported by the current version , 0.9.906 , is 50</string>
    <string name="other_4">That means there are only 25 checks can be added, and the surplus will not take effect</string>
    <string name="other_5">The Inertia Tensor User Scale corresponds to the inertiaTensorUserScale attribute of the Config node in the part and the existing Stability Modifier slider</string>
    <string name="other_6">The All-around Fuel Lines corresponds to the Fuel Line switch in Advanced Part Settings</string>
    <string name="other_7">If you need to keep the original value, please leave it blank and do not enter anything</string>
    <string name="god_mode">The God mode</string>
    <string name="the_god_mode">\u3000\u3000As what you see,this is the god mode,it can give you overall new power to make your craft almost unbreakable.
        Just punch the button below and you will become the GOD,\u3000good luck\u3000:)</string>
    <string name="god_mode_1">The god mode will modify these properties:</string>
    <string name="god_mode_2">- maxDamage -> The health of the part</string>
    <string name="god_mode_3">- collisionDisconnectImpulse -> The connections will failed when the impulse of collision is beyond the volume</string>
    <string name="god_mode_4">- collisionDisconnectVelocity -> The connections will failed when the speed of collision is beyond the volume</string>
    <string name="god_mode_5">- collisionExplodeImpulse -> The part will explode when the impulse of collision is beyond the volume</string>
    <string name="god_mode_6">- collisionExplodeVelocity -> The part will explode when the speed of collision is beyond the volume</string>
    <string name="god_mode_7">- collisionPreventExternalDisconnections -> The connection will not broken from however you hit</string>
    <string name="dialog_version_title">APP 版本</string>
    <string name="dialog_version_text1">当前版本：</string>
    <string name="dialog_version_text2">点击<a href="http://www.baidu.com">此处</a>查看最新版本</string>
    <string name="statement">Declaration</string>
    <string name="statement_1">This program promises to be free but without be tampered for resale!</string>
    <string name="statement_2">We are not responsible if you obtain this program by paying</string>
    <string name="statement_3">Reproduction in any form is strictly prohibited without the permission of the author!</string>
    <string name="contact_us">Contact us</string>
    <string name="qq_code">QQ Group：</string>
    <string name="qq_code_1">784842122</string>
    <string name="tg">Telegram：</string>
    <string name="tg_code">SimpleRockets2 Toolkit</string>
    <string name="sr2_website">SR2 Website：</string>
    <string name="sr2_website_link">JasonCaesar007</string>
    <string name="srt_website">APP Website：</string>
    <string name="srt_website_link">SR2 Toolkit</string>
    <string name="sponsor_website">Sponsorship：</string>
    <string name="sponsor_website_link">Afdian</string>
    <string name="source_license">Open Source License</string>
    <string name="dom4j">Dom4j</string>
    <string name="dom4j_source_license_1">Copyright 2001–2016 © MetaStuff</string>
    <string name="dom4j_source_license_2">Ltd. and DOM4J contributors.</string>
    <string name="copyright_text">Copyright ©2022 InfinityIndustryStudio</string>
    <string-array name="craft_collisions_list">
        <item>Default</item>
        <item>Always</item>
        <item>Never</item>
        <item>No Modifications</item>
    </string-array>
    <string-array name="collisions_list">
        <item>Default</item>
        <item>None</item>
        <item>Dis_only</item>
        <item>No Modifications</item>
    </string-array>
    <string name="dom4j_title">Dom4j License</string>
    <string name="dom4j_license_1">Copyright 2001–2016 © MetaStuff, Ltd. and DOM4J contributors. All Rights Reserved.</string>
</resources>