<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="160dp"
                    android:layout_height="match_parent">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/app_icon"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerInParent="true"
                        android:onClick="linkAppWebSite"
                        android:src="@mipmap/srt_icon"
                        app:riv_corner_radius="100dp" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/app_name"
                        android:textColor="@color/white"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nav_header_title"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/nav_header_subtitle"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_version"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_logo"
                    android:layout_width="320dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/infinity_industry_studio" />

                <TextView
                    android:layout_below="@+id/img_logo"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    android:text="@string/copyright_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/header_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/statement"
                    android:textColor="@color/button_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/statement_1"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/statement_2"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/statement_3"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/header_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="10dp"
                    android:text="@string/contact_us"
                    android:textColor="@color/button_color"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:onClick="linkQqGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/qq_code"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qq_code_1"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:onClick="linkTelegramGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/tg"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tg_code"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:onClick="linkDevWebSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sr2_website"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sr2_website_link"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:onClick="linkSponsorshipWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sponsor_website"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        tools:ignore="NestedWeights" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sponsor_website_link"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/header_color" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/source_license"
                        android:textColor="@color/button_color"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/dom4j_license"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="100dp">

                        <TextView
                            android:onClick="linkDom4jWebsite"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:text="@string/dom4j"
                            android:textStyle="bold"
                            android:textColor="@color/white"
                            android:textSize="22sp" />

                        <LinearLayout
                            android:onClick="dom4jSourceLicense"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="60dp">

                            <TextView
                                android:layout_weight="1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dom4j_source_license_1"
                                android:textColor="@color/white"
                                android:textSize="18sp" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/dom4j_source_license_2"
                                android:layout_weight="1"
                                android:textColor="@color/white"
                                android:textSize="18sp" />

                        </LinearLayout>



                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>